objects/DeployValidate1__c.object
<CustomObject>
    <fields>
        <fullName>Deploy1__c</fullName>
        <label>Deploy1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neuro_Sciences__c</fullName>
        <label>Neuro Sciences</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Thermo_Neuro_Sciences__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>PharmD</fullName>
                </value>
                <value>
                    <fullName>Primary Care</fullName>
                </value>
                <value>
                    <fullName>Prostate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perioperative_Neuro__c</fullName>
        <label>Perioperative Neuro</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Permission3__c</fullName>
        <label>Permission3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Test_2__c</fullName>
        <label>Permission Test 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thermo_Neuro_Sciences__c</fullName>
        <label>Thermo Neuro Sciences</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PharmD</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Natural Sciences</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DeployValidate1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DeployValidate1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DeployValidates1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>